--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "element-ui": "^2.13.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "router": "^1.3.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
